# chat-api-fast-api

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
chat_api/: __init__.py  config.py  dependencies.py  main.py
chat_api/common/: __init__.py  mysql.py
chat_api/health/: routes.py
chat_api/schema/: message_schema.sql  user_schema.sql
chat_api/users/: routes.py  types.py
test_data/: message_meta.sql  message_text.sql  message_type_meta.sql  schema_update.py
