[project]
name = "chat-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Suryarpan",email = "52556381+Suryarpan@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "cryptography (>=44.0.2,<45.0.0)"
]

[tool.poetry]
packages = [{include = "chat_api"}]


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
